--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "poppins", sans-serif;
+}
+
 .box{
   height: 100px;
   width: 100px;
   background-color: red;
 }
 
+  
+.loginForm{
+  
+}
 
